last commit before restructure

--- a/globus_portal_framework/search/templates/components/search-facets-accord.html
+++ b/globus_portal_framework/search/templates/components/search-facets-accord.html
@@ -1,4 +1,4 @@
-<div id="accordian .tightwidth">
+<div id="accordian">
 {% for facet in search.facets %}
 <hr class="style1">
 <div class="panel panel-default">
