--- a/globus_portal_framework/templates/base.html
+++ b/globus_portal_framework/templates/base.html
@@ -22,8 +22,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 -->
 
-<!-- Google charts -->
+<!-- Google charts 
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+-->
+<script type="text/javascript" src="{% static 'js/loader.js' %}"></script>
+
 <!-- custom charts -->  
   <script src="{% static 'js/cr3-charts.js' %}"></script>
   <script src="{% static 'js/search-utils.js' %}"></script>
@@ -47,8 +50,8 @@
   <body>
 <div id="pittlogo"><img src="/static/img/pitt.jpg" height="50px;"></div>
 <div class="jumbotron jumbotron-fluid text-center">
-  <h1>Aurora Data Discovery Portal</h1>
- <h3>Metastatic Breast Cancer</h3>     
+  <h1>Aurora Breast Cancer</h1>
+ <h3>Data Discovery Portal</h3>     
  <!-- <hr class="my-4">  creates a hz line-->
 </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
