--- a/globus_portal_framework/templates/index.html
+++ b/globus_portal_framework/templates/index.html
@@ -27,8 +27,8 @@
   <body>
 <div id="pittlogo"><img src="/static/img/pitt.jpg" height="50px;"></div>    
 <div class="jumbotron  jumbotron-fluid text-center">
-  <h1>Aurora Data Discovery Portal</h1>
-   <h3>Metastatic Breast Cancer</h3>     
+<h1>Aurora Breast Cancer</h1>
+ <h3>Data Discovery Portal</h3>     
  <!-- <hr class="my-4">  creates a hz line-->
 </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
