--- a/app/globus_portal_framework/search/templates/components/search-results.html
+++ b/app/globus_portal_framework/search/templates/components/search-results.html
@@ -48,7 +48,8 @@ function viewPortion(portion_id) {
 }
 </script>
 
-<span class="sample-labels">Found data associated with {{search.result_total.value|intcomma}} patient(s)&nbsp;&nbsp;|&nbsp;&nbsp;<i class="fas fa-download" title="Download List to CSV"></i></span>  
+<span class="sample-labels">Found data associated with {{search.result_total.value|intcomma}} patient(s)&nbsp;&nbsp;</span>  
+<!--<i class="fas fa-download" title="Download List to CSV"></i>-->
 <div class="resultscroll">
 {% for result in search.search_results %}
 <!-- <div> -->
